--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,92 @@
-/* You can add global styles to this file, and also import other style files */
+/***********************************************
+General
+************************************************/
+
+body{
+    height: 100%;
+    width: 100%;
+}
+
+/************************************************
+Fonts
+************************************************/
+
+@font-face {
+    font-family: "Tajawal-Reqular";
+    src: url('assets/fonts/Tajawal/Tajawal-Regular.ttf') format('ttf');
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: "Tajawal-Medium";
+    src: url('assets/fonts/Tajawal/Tajawal-Medium.ttf') format('ttf');
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: "Tajawal-Bold";
+    src: url('assets/fonts/Tajawal/Tajawal-ExtraBold.ttf') format('ttf');
+    font-style: normal;
+    font-display: swap;
+}
+
+.Tajawal-Reqular{
+    font-family: 'Tajawal-Reqular';
+}
+.Tajawal-Medium{
+    font-family: 'Tajawal-Medium';
+    font-weight: 500;
+}
+.Tajawal-Bold{
+    font-family: 'Tajawal-Bold';
+    font-weight: 700;
+}
+
+.fs-28{
+    font-size: 28px;
+}
+.fs-37{
+    font-size: 37px;
+}
+.fs-20{
+    font-size: 20px;
+}
+
+.blue-txt-color{
+    color: #007AFF;
+}
+
+
+
+.p-toast-message-text,.p-toast-message-content button{
+    display: flex !important;
+    justify-content: space-evenly !important;
+    margin: auto !important;
+}
+
+.p-toast .p-toast-message.p-toast-message-error{
+    width: 500px !important;
+    border-left: none !important;
+    border-bottom: 5px solid #B71212 !important;
+}
+
+.p-toast-summary,.p-toast-detail{
+    font-size: 19px !important;
+    margin: auto !important;
+}
+
+.p-toast-message-icon svg{
+    display: none;
+}
+
+@media only screen and (min-width : 320px) and (max-width : 998px) {
+    .fs-28{
+        font-size: 20px;
+    }
+    .fs-37{
+        font-size: 28px;
+    }
+    .fs-20{
+        font-size: 16px;
+    }
+}
