--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,22 +1,10 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 a{
     text-decoration: none;
-}
-
-.page-container{
-    width: 100%;
-    /* max-height: 100vh; */
-    height:100vh ;
-    background-color: #2A2A2C;
-    background-image: url(/assets/building.png);
-    background-repeat: no-repeat;
-    background-size: auto;
-    background-position: bottom;
 }
 
 .mt-150{
@@ -34,6 +22,18 @@ a{
 .mt-70{
     margin-top: 70px;
 }
+
+.page-container{
+    width: 100%;
+    /* max-height: 100vh; */
+    height:100% ;
+    background-color: #2A2A2C;
+    background-image: url(/assets/building.png);
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: bottom;
+}
+
 
 .login-container{
     width: 680px;
@@ -89,6 +89,8 @@ button{
     height: 75px;
 }
 
+
+
 @media only screen and (min-width : 320px) and (max-width : 998px) {
     .mt-70{
         margin-top: 40px;
@@ -112,10 +114,20 @@ button{
         background-size: 100%;
     }
 
+    .brand-logo{
+        display: none;
+    }
+
     .login-container{
-        height: max-content;
+        min-height: 514px;
+        max-height: 550px;
         padding: 20px;
-        margin: 80px 0;
+       position: absolute;
+       top: 0;
+       bottom: 0;
+       left: 0;
+       right: 0;
+       margin: auto;
     }
 
     .flex-sm{
