--- a/src/app/pages/category/components/subcategory/subcategory.component.html
+++ b/src/app/pages/category/components/subcategory/subcategory.component.html
@@ -3,7 +3,7 @@
     <div class="col-12 d-flex justify-content-between">
         <p  class="Tajawal-Medium fs-28">تصنيف فرعي</p>
 
-        <button class="addSubcategory-btn">
+        <button (click)="addingSubCategory()" class="addSubcategory-btn">
             <i class="pi pi-plus"></i>
         </button>
     </div>
