--- a/src/app/pages/product/product.component.css
+++ b/src/app/pages/product/product.component.css
@@ -40,33 +40,55 @@ height: 10px;
 border-radius: 50%;
 }
 
-.addCategory-btn{
-    width: 190px;
-    height: 80px;
+.addProduct-btn{
+    width: 164px;
+    height: 53px;
     background: #2A2A2C;
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 8px; 
+    border-radius: 10px; 
 }
 
-.editCategory-btn{
-    background-color: transparent;
-    border: none;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.editCategory-btn:hover{
-    background-color: #F0F0F0;
-}
 
 
 swiper-container{
     margin: 0;
+}
+
+.viewLabl {
+    display : block;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+}
+.viewLabl > input{ /* HIDE RADIO */
+    visibility: hidden; /* Makes input not-clickable */
+    position: absolute; /* Remove input from document flow */
+}
+.viewLabl > input + div{ /* DIV STYLES */
+    cursor:pointer;
+    border: 1px solid #ACACAC;
+    color: #2A2A2C;
+}
+
+.viewLabl > input:checked + div{ /* (RADIO CHECKED) DIV STYLES */
+    background-color: #2A2A2C;
+    border: 1px solid #2A2A2C;
+    color: #F7F7F7;
+}
+
+.viewLabl .radioView-container{
+border-radius: 8px;
+padding: 13px;
+}
+
+.viewLabl > input + div.radioView-container i{
+    font-size: 20px;
+}
+
+.viewLabl > input:checked + div.radioView-container i{
+color: #CECECE;
 }
