--- a/src/styles.css
+++ b/src/styles.css
@@ -77,6 +77,10 @@ Fonts
     color: #B71212 !important;
 }
 
+button:disabled{
+    opacity: 0.5;
+}
+
 code-input span{
     padding: 8px !important;
 }
@@ -150,6 +154,67 @@ code-input input{
     color: #2A2A2C;
 }
 
+.ngx-pagination{
+    position: absolute !important ;
+    left: 0 !important ;
+    bottom: 15px !important ;
+    width: max-content !important ;
+    height: 38px !important;
+    border: 1px solid black !important ;
+    margin: 0 25px !important ;
+    border-radius: 20px !important ;
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
+    direction: ltr;
+}
+
+
+.ngx-pagination .current {
+    padding: 0.1875rem 0.625rem;
+    background: #2A2A2C !important;
+    width: 25px !important;
+    height: 25px !important;
+    border-radius: 50% !important;
+    margin: 0 10px !important;
+    font-size: 12px;
+}
+
+.ngx-pagination .pagination-next a:hover,
+.ngx-pagination .pagination-previous a:hover,
+.ngx-pagination li a:hover{
+    color: black !important;
+    border-radius: 50%;
+}
+
+.ngx-pagination .pagination-previous:before, .ngx-pagination .pagination-next:after,
+.ngx-pagination .pagination-next a:after,
+.ngx-pagination .pagination-previous a:before {
+    display: none !important;
+}
+
+.pagination-previous.disabled,
+.pagination-next.disabled{
+    opacity: 0.5;
+}
+
+.ngx-pagination .pagination-previous a,
+.ngx-pagination .pagination-next a{
+    color: white !important;
+}
+
+.pagination-previous,
+.pagination-next{
+    background: #2A2A2C !important;
+    width: 25px !important;
+    height: 25px !important;
+    border-radius: 50% !important;
+    margin: 0 10px !important;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+}
 @media only screen and (min-width : 320px) and (max-width : 998px) {
     .fs-28{
         font-size: 20px;
