--- a/src/app/pages/product/product.component.css
+++ b/src/app/pages/product/product.component.css
@@ -1,6 +1,6 @@
 .labl {
     display : block;
-    width: 200px;
+    width: max-content;
 }
 .labl > input{ /* HIDE RADIO */
     visibility: hidden; /* Makes input not-clickable */
@@ -53,8 +53,12 @@ border-radius: 50%;
 
 
 
-swiper-container{
-    margin: 0;
+.swiper{
+    margin: 0 !important;
+}
+
+::ng-deep .swiper-slide{
+   width: max-content !important;
 }
 
 .viewLabl {
