--- a/src/app/shared/home/home.component.html
+++ b/src/app/shared/home/home.component.html
@@ -1,9 +1,9 @@
-<div class="home-container d-flex justify-content-between">
-    <div class="sidebar">
+<div class="row home-container">
+    <div class="col-sm-0 col-md-0 col-lg-2 sidebar">
         <app-sidebar></app-sidebar>
     </div>
 
-    <div class="content">
+    <div class="col-sm-12 col-md-12 col-lg-10 content">
         <app-topbar class="text-center"></app-topbar>
         <div class="scroll">
             <div class="container-fluid">
