--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+@import 'swiper/swiper-bundle.min.css';
 /***********************************************
 General
 ************************************************/
@@ -11,6 +12,9 @@ a{
     cursor: pointer;
 }
 
+.row {
+    --bs-gutter-x: 0 !important;
+}
 
 /************************************************
 Fonts
