--- a/src/app/pages/category/components/edit-category/edit-category.component.html
+++ b/src/app/pages/category/components/edit-category/edit-category.component.html
@@ -17,11 +17,17 @@
                 <div class="row my-3">
                     <div class="col-12 d-flex align-items-center">
                         <label class="form-label" for="unit_type"><i style="font-size: 10px;" class="pi pi-circle-fill ms-2"></i> الوحدة</label>
-                        <input style="width:70%;" class="form-control me-2" type="text" name="unit_type" id="unit_type" required [(ngModel)]="unit_type" placeholder="مثال : كيس">
+                        <input style="width:60%;" class="form-control me-2" type="text" name="unit_type" id="unit_type" required [(ngModel)]="unit_type" placeholder="مثال : كيس">
                     </div>
                 </div>
                 <div class="row my-3">
-                    <div class="col-12 mt-5 d-flex justify-content-evenly">
+                    <div class="col-12 d-flex align-items-center">
+                        <label class="form-label" for="commission"><i style="font-size: 10px;" class="pi pi-circle-fill ms-2"></i> عمولة</label>
+                        <input style="width:60%;" class="form-control me-2" type="text" name="commission" id="commission" required [(ngModel)]="commission" placeholder="عمولة">
+                    </div>
+                </div>
+                <div class="row my-3">
+                    <div class="col-12 mt-3 d-flex justify-content-evenly">
                         <button type="submit" [disabled]="form.invalid" class="add-btn Tajawal-Medium fs-20">حفظ</button>
                         <button (click)="delete()" class="delete-btn Tajawal-Medium fs-20">حذف</button>
                     </div>
