--- a/src/app/pages/category/components/subcategory/subcategory.component.html
+++ b/src/app/pages/category/components/subcategory/subcategory.component.html
@@ -12,12 +12,12 @@
 <div *ngIf="allsubCategoryList?.length" class="row mt-20">
     <div *ngFor="let item of allsubCategoryList" class="col-12 subCategory-container my-4 d-flex justify-content-between align-items-center">
         <div class="subCategory-desc d-flex align-items-center">
-            <p class="number Tajawal-Medium fs-20 my-0 ">{{item.commission.split('.')[0]}}</p>
+            <p class="number Tajawal-Medium fs-20 my-0 ">{{item.commission}}</p>
             <p class="title Tajawal-Medium fs-28 my-0 me-3">{{item.title}}</p>
         </div>
         <div class="subCategory-btns d-flex align-items-center">
             <button class="delete-btn"><i class="pi pi-trash red-color fs-4"></i></button>
-            <button class="edit-btn Tajawal-Medium fs-20 me-3">تعديل</button>
+            <button (click)="view.emit('edit subCategory'); subCategoryId.emit(item.id);parentId.emit(id)" class="edit-btn Tajawal-Medium fs-20 me-3">تعديل</button>
         </div>
     </div>
 </div>
