--- a/src/app/shared/home/home.component.css
+++ b/src/app/shared/home/home.component.css
@@ -1,10 +1,20 @@
 .home-container{
     padding: 45px 30px;
     overflow: hidden;
+    width: 100%;
 }
 
+
+.home-container .content {
+    margin: 0 auto;
+}
 
 .home-container .content .scroll{
    overflow-y: auto;
    overflow-x: hidden;
+   height: 100%;
+}
+
+.col-2.sidebar{
+    width: 12.333333% !important;
 }
