--- a/src/app/shared/topbar/topbar.component.css
+++ b/src/app/shared/topbar/topbar.component.css
@@ -1,5 +1,5 @@
 .navbar{
-    width: 83vw;
+    width: 100%;
     padding: 20px;
     background: #FDFDFD 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #272D3B33;
