--- a/src/app/shared/topbar/topbar.component.html
+++ b/src/app/shared/topbar/topbar.component.html
@@ -20,8 +20,8 @@
                   <i class="pi pi-user fs-5 mx-3"></i>
                   <p>{{userName}}</p>
                 </button>
-                <ul   [style.display]="show ? 'block' : 'none'" class="dropdown-menu">
-                  <li><a class="dropdown-item" (click)="logOut()">تسجيل خروج</a></li>
+                <ul   [style.display]="show ? 'block' : 'none'" class="dropdown-menu text-center">
+                  <li><a class="dropdown-item" (click)="logOut()"><i class="pi pi-sign-out mx-2"></i> تسجيل خروج</a></li>
                 </ul>
               </div>
         </div>
